--- a/index.html
+++ b/index.html
@@ -41,10 +41,16 @@
 					<li class="item">
 						<a href="#hobbies" class="hipervinculo w-clearfix"><div class="img-hobbies"></div><p class="texthyp">Hobbies</p></a>
 					</li>
+					<li class="item">
+						<a href="https://landsas.github.io/Arcade-Pikachu/" class="hipervinculo w-clearfix"><div class="img-pikachu"></div><p class="texthyp">Entra a ver mi arcade</p></a>
+					</li>
+					<li class="item">
+						<a href="http://fcprro21.net16.net/" class="hipervinculo w-clearfix"><div class="img-pixel"></div><p class="texthyp">Entra a ver mi pixel art</p></a>
+					</li>
 				</ul>
 			</nav>
 			<div class="redes">
-				<a href="https://www.facebook.com/lautaro.wolowien" title="FACEBOOK!!!!"><div class="img-redes"></div></a>
+				<a href="https://www.facebook.com/lautaro.wolowien.900" title="FACEBOOK!!!!"><div class="img-redes"></div></a>
 			</div>
 		</div>
 
@@ -65,7 +71,7 @@
 						</li>
 						<li>
 							<div class="titulo">Edad</div>
-							<div class="contenido">20</div>
+							<div class="contenido">21</div>
 						</li>
 					</ul>
 					<ul class="lista">
